<resources>
    <string name="app_name">GROCLIST</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--for content_main main screen-->
    <string name="scan">SCAN</string>
    <string name="type_plu">Type PLU: </string>
    <string name="price_lbs">Price/lbs: </string>
    <string name="lbs">Pounds: </string>
    <string name="add">ADD</string>
    <string name="select">Select Store: </string>
    <string name="total_price">Total: </string>
    <string name="or_option">-or-</string>

    <!-- for side bar -->
    <string name="current">Current Cart</string>
    <string name="past">Past Purchases</string>
    <string name="pantry">My Pantry</string>
    <string name="home">Home</string>


    <string name="add_button">ADD</string>

    <!--exijsting entry fragment -->
    <string name="new_price">New Price?</string>

    <!--new entry fragment -->
    <string name="whatisit">What is this?</string>
    <string name="how_much">How much is it?</string>

    <string name="riskexplanation">Risk explanation:
        if an item risk is </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
