<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/current_cart"
            android:title="@string/current" />

        <!--  android:icon="@drawable/ic_menu_camera"-->
        <item
            android:id="@+id/past_purchases"
            android:title="@string/past" />
        <item
            android:id="@+id/my_pantry"
            android:title="@string/pantry" />

    </group>

    <!--
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item> -->

</menu>
