<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="groclist.edu.fsu.cs.mobile.groclist.NewEntryFragment">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/new_item"
            android:text="@string/whatisit"
            android:id="@+id/textView5"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="74dp" />

        <EditText
            android:id="@+id/new_item"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textStyle="bold"
            android:layout_below="@+id/textView5"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/How_much"
            android:text="@string/how_much"
            android:id="@+id/textView4"
            android:layout_above="@+id/How_much"
            android:layout_centerHorizontal="true" />

        <EditText
            android:id="@+id/How_much"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:layout_alignStart="@+id/new_item" />

        <Button
            android:id="@+id/add_existing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_button"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="89dp" />

</RelativeLayout>
